Projeto Monstro ok

--- a/index.html
+++ b/index.html
@@ -33,17 +33,19 @@
             <div v-if="playerLife == 0" class="lose">Você perdeu! :(</div>
         </div>
         <div class="panel buttons">
-            <template>
-                <button class="btn attack">Ataque</button>
-                <button class="btn especial-attack">Ataque Especial</button>
-                <button class="btn heal">Curar</button>
-                <button class="btn give-up">Desistir</button>
+            <template v-if="running">
+                <button @click="attack(false)" class="btn attack">Ataque</button>
+                <button @click="attack(true)" class="btn especial-attack">Ataque Especial</button>
+                <button @click="healAndHurt" class="btn heal">Curar</button>
+                <button @click="running = false" class="btn give-up">Desistir</button>
             </template>
-            <button class="btn new-game">Iniciar Jogo</button>
+            <button v-else @click="startGame" class="btn new-game">Iniciar Jogo</button>
         </div>
-        <div class="panel logs">
+        <div v-if="logs.length" class="panel logs">
             <ul>
-                <li></li>
+                <li v-for="log in logs" :class="log.cls" class="log">
+                    {{log.text}}
+                </li>
             </ul>
         </div>
     </div>
